Clean Up Baby Magazine - 100 / 100

--- a/02.HTML-Structure-Exercise-Resouces/L2_07_Clean-up-Baby-Magazine/index.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_07_Clean-up-Baby-Magazine/index.html
@@ -47,9 +47,6 @@
    </a>
    <!--.post excerpt-->
 
-
-
-
    <h3>Latest</h3>
    <article>
       <h2>
@@ -303,157 +300,22 @@
 
    </article>
 
-
-
-
    <a rel='nofollow' href='https://www.babycaremag.com/page/2/'>2</a>
    <a rel='nofollow' href='https://www.babycaremag.com/page/3/'>3</a>
    <a rel='nofollow' href='https://www.babycaremag.com/page/4/'>4</a>
    <a rel='nofollow' href='https://www.babycaremag.com/page/2/'>Next</a>
    <a rel='nofollow' href='https://www.babycaremag.com/page/30/'>Last</a>
 
-
-
-   <!-- aside start -->
-   <div id="search-2" class="widget widget_search">
-      <form method="get" id="searchform" class="search-form" action="https://www.babycaremag.com" _lpchecked="1">
-         <fieldset>
-            <input type="text" name="s" id="s" value="" placeholder="Search the site" />
-            <button id="search-image" class="sbutton" type="submit" value="">
-               <i class="fa fa-search"></i>
-            </button>
-         </fieldset>
-      </form>
-   </div>
-   <div id="facebook-like-widget-5" class="widget facebook_like"><span class="widget-title">Find us on
-         Facebook</span>
-      <div class="fb-page" data-href="https://www.facebook.com/babycaremag/" data-width="300" data-hide-cover="false"
-         data-show-facepile="true" data-show-posts="false"></div>
-   </div>
-   <div id="text-6" class="widget widget_text">
-      <div class="textwidget">
-         <script id="mNCC" language="javascript">
-            medianet_width = "300";
-            medianet_height = "250";
-            medianet_crid = "517816329";
-            medianet_versionId = "111299";
-            (function () {
-               var isSSL = 'https:' == document.location.protocol;
-               var mnSrc = (isSSL ? 'https:' : 'http:') + '//contextual.media.net/nmedianet.js?cid=8CUG6FPFK' + (isSSL ? '&https=1' : '');
-               document.write('<scr' + 'ipt type="text/javascript" id="mNSC" src="' + mnSrc + '"></scr' + 'ipt>');
-            })();
-         </script>
-      </div>
-   </div>
-   <div id="categories-2" class="widget widget_categories"><span class="widget-title">Categories</span>
-      <ul>
-         <li class="cat-item cat-item-669"><a href="https://www.babycaremag.com/category/baby-products/">Baby
-               Products</a>
-         </li>
-         <li class="cat-item cat-item-668"><a href="https://www.babycaremag.com/category/for-parents/">For
-               Parents</a>
-         </li>
-         <li class="cat-item cat-item-667"><a href="https://www.babycaremag.com/category/health-and-nutrition/">Health
-               &amp; Nutrition</a>
-         </li>
-         <li class="cat-item cat-item-670"><a href="https://www.babycaremag.com/category/holidays-and-events/">Holidays
-               &amp; Events</a>
-         </li>
-         <li class="cat-item cat-item-666"><a href="https://www.babycaremag.com/category/milestones/">Milestones</a>
-         </li>
-         <li class="cat-item cat-item-53"><a href="https://www.babycaremag.com/category/parenting/">Parenting</a>
-         </li>
-      </ul>
-   </div>
-   <div id="text-21" class="widget widget_text">
-      <div class="textwidget">
-         <div id="zergnet-widget-60095"></div>
-         <p>
-            <script language="javascript" type="text/javascript">
-               (function () {
-                  var zergnet = document.createElement('script');
-                  zergnet.type = 'text/javascript'; zergnet.async = true;
-                  zergnet.src = (document.location.protocol == "https:" ? "https:" : "http:") + '//www.zergnet.com/zerg.js?id=60095';
-                  var znscr = document.getElementsByTagName('script')[0];
-                  znscr.parentNode.insertBefore(zergnet, znscr);
-               })();
-            </script>
-         </p>
-      </div>
-   </div>
-   <div id="nav_menu-2" class="widget widget_nav_menu"><span class="widget-title">Partner Sites</span>
-      <div class="menu-partner-container">
-         <ul id="menu-partner" class="menu">
-            <li id="menu-item-15619" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-15619">
-               <a href="https://www.babybetttest.com/">Babybett</a>
-            </li>
-         </ul>
-      </div>
-   </div>
-
-   <!-- aside end -->
-   <!--#sidebar-->
-
-   <!--#page-->
-   <footer id="site-footer" role="contentinfo" itemscope itemtype="http://schema.org/WPFooter">
-      <div class="copyrights">
-         <div class="row" id="copyright-note">
-            <div class="copyright-left-text">Copyright © 2021 <a href="http://www.babycaremag.com" rel="nofollow"
-                  title="The total scoop on baby care" rel="nofollow">BabyCare Mag</a>.</div>
-            <div class="footer-navigation">
-               <ul id="menu-bottom-nav" class="menu">
-                  <li id="menu-item-157" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-157">
-                     <a href="http://www.babycaremag.com/privacy-policy/">Privacy Policy</a>
-                  </li>
-                  <li id="menu-item-156" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-156">
-                     <a href="http://www.babycaremag.com/dmca-policy/">DMCA Policy</a>
-                  </li>
-                  <li id="menu-item-155" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-155">
-                     <a href="http://www.babycaremag.com/terms-of-use/">Terms Of Use</a>
-                  </li>
-                  <li id="menu-item-154" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-154">
-                     <a href="http://www.babycaremag.com/curation-policy/">Curation Policy</a>
-                  </li>
-                  <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153">
-                     <a href="http://www.babycaremag.com/sitemap/">Sitemap</a>
-                  </li>
-               </ul>
-            </div>
-            <div class="top"><a href="#top" rel="nofollow" class="toplink">&nbsp;</a></div>
-         </div>
-      </div>
-      <div style="padding: 15px 15px 15px 15px; background-color: #EEEEEE; color: #9B9B9B; text-transform:uppercase;">
-         <center>
-            <a href="http://www.babycaremag.com" rel="nofollow" title="BabyCare Mag">Babycaremag.com</a> is a
-            participant in the Amazon Services LLC Associates Program, an affiliate advertising program designed to
-            provide a means for sites to earn advertising fees by advertising and linking to amazon.com.
-         </center>
-      </div>
-   </footer>
-   <!--#site-footer-->
-
-   <!--.main-container-->
-   <!--start footer code-->
-   <div class="AW-Form-1521130298"></div>
-   <script type="text/javascript">(function (d, s, id) {
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) return;
-         js = d.createElement(s); js.id = id;
-         js.src = "//forms.aweber.com/form/98/1521130298.js";
-         fjs.parentNode.insertBefore(js, fjs);
-      }(document, "script", "aweber-wjs-gm8oi32oz"));
-   </script>
-
-   <!--end footer code-->
-   <script type='text/javascript' src='https://www.babycaremag.com/wp-includes/js/wp-embed.min.js?ver=5.4.4'></script>
-
-   <script type="text/javascript">
-< !--
-var extrawatch_projectId = '8e0d089b45ea58d67aa8a6ac7d4cb678fad4ef85';
-      document.write("<script src='https://agent.extrawatch.com/extrawatch/agent/js/" +
-         "?projectId=" + extrawatch_projectId + "' type='text/javascript'><\/script>");
-      -->
-   </script>
+   <a href="http://www.babycaremag.com" rel="nofollow">BabyCare Mag</a>
+   <a href="http://www.babycaremag.com/privacy-policy/">Privacy Policy</a>
+   <a href="http://www.babycaremag.com/dmca-policy/">DMCA Policy</a>
+   <a href="http://www.babycaremag.com/terms-of-use/">Terms Of Use</a>
+   <a href="http://www.babycaremag.com/curation-policy/">Curation Policy</a>
+   <a href="http://www.babycaremag.com/sitemap/">Sitemap</a>
+   <a href="http://www.babycaremag.com" rel="nofollow">
+      Babycaremag.com</a> is a
+   participant in the Amazon Services LLC Associates Program, an affiliate advertising program designed to
+   provide a means for sites to earn advertising fees by advertising and linking to amazon.com.
 
 </body>
 
