next paragraph - done

--- a/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
@@ -570,83 +570,88 @@
         where elephants are now extinct.
         <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Borneo-15">[15]</a>
     </p>
-    <p>The <a href="https://en.wikipedia.org/wiki/African_elephant" title="African elephant">African
-            elephant</a> was first named by German naturalist <a
-            href="https://en.wikipedia.org/wiki/Johann_Friedrich_Blumenbach" title="Johann Friedrich Blumenbach">Johann
-            Friedrich Blumenbach</a> in 1797 as <i>Elephas
-            africanus</i>.<sup id="cite_ref-17" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-17">[17]</a></sup>
-        The genus <i>Loxodonta</i> was named by <a href="https://en.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Cuvier"
-            title="Frédéric Cuvier">Frédéric
-            Cuvier</a> in 1825.<sup id="cite_ref-18" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-18">[18]</a></sup> Cuvier
-        spelled it <i>Loxodonte,</i> but in 1827 an anonymous author <a
-            href="https://en.wikipedia.org/wiki/Romanization" title="Romanization">romanised</a> the
-        spelling to <i>Loxodonta<sup id="cite_ref-19" class="reference"><a
-                    href="https://en.wikipedia.org/wiki/Elephant#cite_note-19">[19]</a></sup></i>; the
-        <a href="https://en.wikipedia.org/wiki/International_Code_of_Zoological_Nomenclature"
-            title="International Code of Zoological Nomenclature">International
-            Code of Zoological Nomenclature</a> recognises this as the proper authority.<sup id="cite_ref-MSW3_9-1"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-MSW3-9">[9]</a></sup>
-        In 1942, 18 subspecies of African elephant were recognised by <a
-            href="https://en.wikipedia.org/wiki/Henry_Fairfield_Osborn" title="Henry Fairfield Osborn">Henry
-            Fairfield Osborn</a>,<sup id="cite_ref-20" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-20">[20]</a></sup> but further
-        morphological data has reduced the number of classified subspecies, and by the 1990s, only two
+    <p>
+        The
+        <a href="https://en.wikipedia.org/wiki/African_elephant">African elephant</a>
+        was first named by German naturalist
+        <a href="https://en.wikipedia.org/wiki/Johann_Friedrich_Blumenbach">
+            Johann Friedrich Blumenbach
+        </a>
+        in 1797 as <i>Elephas africanus</i>.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-17">[17]</a>
+        The genus <i>Loxodonta</i> was named by
+        <a href="https://en.wikipedia.org/wiki/Fr%C3%A9d%C3%A9ric_Cuvier">Frédéric Cuvier</a>
+        in 1825.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-18">[18]</a>
+        Cuvier spelled it <i>Loxodonte,</i> but in 1827 an anonymous author
+        <a href="https://en.wikipedia.org/wiki/Romanization">romanised</a>
+        the spelling to
+        <i>
+            Loxodonta
+            <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-19">[19]</a>
+        </i>; the
+        <a href="https://en.wikipedia.org/wiki/International_Code_of_Zoological_Nomenclature">
+            International Code of Zoological Nomenclature
+        </a>
+        recognises this as the proper authority.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-MSW3-9">[9]</a>
+        In 1942, 18 subspecies of African elephant were recognised by
+        <a href="https://en.wikipedia.org/wiki/Henry_Fairfield_Osborn">Henry Fairfield Osborn</a>,
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-20">[20]</a>
+        but further morphological data has reduced the number of classified subspecies, and by the 1990s, only two
         were recognised, the savannah or bush elephant (<i>L.&nbsp;a.&nbsp;africana</i>) and the forest
-        elephant (<i>L.&nbsp;a.&nbsp;cyclotis</i>),<sup id="cite_ref-21" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-21">[21]</a></sup>
-        the latter having been named in 1900 by German zoologist <a href="https://en.wikipedia.org/wiki/Paul_Matschie"
-            title="Paul Matschie">Paul
-            Matschie</a>.<sup id="cite_ref-22" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-22">[22]</a></sup>
+        elephant (<i>L.&nbsp;a.&nbsp;cyclotis</i>),
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-21">[21]</a>
+        the latter having been named in 1900 by German zoologist
+        <a href="https://en.wikipedia.org/wiki/Paul_Matschie">Paul Matschie</a>.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-22">[22]</a>
         Forest elephants have smaller and more rounded ears and thinner and straighter tusks than bush
-        elephants, and are limited in range to the forested areas of <a href="https://en.wikipedia.org/wiki/West_Africa"
-            title="West Africa">western</a> and <a href="https://en.wikipedia.org/wiki/Central_Africa"
-            title="Central Africa">Central
-            Africa</a>.<sup id="cite_ref-Shoshani42_23-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Shoshani42-23">[23]</a></sup> A
-        2000 study argued for the elevation of the two forms into separate species
+        elephants, and are limited in range to the forested areas of
+        <a href="https://en.wikipedia.org/wiki/West_Africa">western</a>
+        and
+        <a href="https://en.wikipedia.org/wiki/Central_Africa">Central Africa</a>.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Shoshani42-23">[23]</a>
+        A 2000 study argued for the elevation of the two forms into separate species
         (<i>L.&nbsp;africana</i>
-        and <i>L.&nbsp;cyclotis</i> respectively) based on differences in skull morphology.<sup id="cite_ref-24"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-24">[24]</a></sup>
-        DNA studies published in 2001 and 2007 also suggested they were distinct species<sup id="cite_ref-outgroup_25-0"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-outgroup-25">[25]</a></sup><sup
-            id="cite_ref-26" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-26">[26]</a></sup>
-        while studies in 2002 and 2005 concluded that they were the same species.<sup id="cite_ref-27"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-27">[27]</a></sup><sup
-            id="cite_ref-Debruyne_28-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Debruyne-28">[28]</a></sup>
+        and <i>L.&nbsp;cyclotis</i> respectively) based on differences in skull morphology.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-24">[24]</a>
+        DNA studies published in 2001 and 2007 also suggested they were distinct species
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-outgroup-25">[25]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-26">[26]</a>
+        while studies in 2002 and 2005 concluded that they were the same species.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-27">[27]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Debruyne-28">[28]</a>
         Further studies (2010, 2011, 2015) have supported African savannah and forest elephants' status
-        as separate species.<sup id="cite_ref-DNA_29-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-DNA-29">[29]</a></sup><sup
-            id="cite_ref-Ishida_30-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Ishida-30">[30]</a></sup><sup
-            id="cite_ref-genomic_31-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-genomic-31">[31]</a></sup>
-        The two species are believed to have diverged 6 million years ago<sup id="cite_ref-32" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-32">[32]</a></sup>
+        as separate species.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-DNA-29">[29]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Ishida-30">[30]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-genomic-31">[31]</a>
+        The two species are believed to have diverged 6 million years ago
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-32">[32]</a>
         and have been
-        completely genetically isolated for the past 500,000 years.<sup id="cite_ref-Palkopoulou_33-0"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Palkopoulou-33">[33]</a></sup>
+        completely genetically isolated for the past 500,000 years.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Palkopoulou-33">[33]</a>
         In 2017, DNA sequence analysis showed that <i>L. cyclotis</i> is more closely related to the
-        extinct <i><a href="https://en.wikipedia.org/wiki/Palaeoloxodon_antiquus" class="mw-redirect"
-                title="Palaeoloxodon antiquus">Palaeoloxodon antiquus</a></i>, than it is to <i>L.
-            africana,</i> possibly undermining the genus Loxodonta as a whole.<sup id="cite_ref-34" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-34">[34]</a></sup>
-        Some evidence suggests that elephants of western Africa are a separate species,<sup id="cite_ref-35"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-35">[35]</a></sup>
-        although this is disputed.<sup id="cite_ref-Debruyne_28-1" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Debruyne-28">[28]</a></sup><sup
-            id="cite_ref-Ishida_30-1" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Ishida-30">[30]</a></sup>
-        The <a href="https://en.wikipedia.org/wiki/Pygmy_elephant" title="Pygmy elephant">pygmy
-            elephants</a> of the <a href="https://en.wikipedia.org/wiki/Congo_Basin" title="Congo Basin">Congo
-            Basin</a>, which have been suggested to be a separate species (<i>Loxodonta pumilio</i>)
+        extinct
+        <i>
+            <a href="https://en.wikipedia.org/wiki/Palaeoloxodon_antiquus">
+                Palaeoloxodon antiquus
+            </a>
+        </i>, than it is to <i>L. africana,</i> possibly undermining the genus Loxodonta as a whole.<a
+            href="https://en.wikipedia.org/wiki/Elephant#cite_note-34">[34]</a>
+        Some evidence suggests that elephants of western Africa are a separate species,
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-35">[35]</a>
+        although this is disputed.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Debruyne-28">[28]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Ishida-30">[30]</a>
+        The
+        <a href="https://en.wikipedia.org/wiki/Pygmy_elephant">pygmy elephants</a>
+        of the
+        <a href="https://en.wikipedia.org/wiki/Congo_Basin">Congo Basin</a>,
+        which have been suggested to be a separate species (<i>Loxodonta pumilio</i>)
         are probably forest elephants whose small size and/or early maturity are due to environmental
-        conditions.<sup id="cite_ref-36" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-36">[36]</a></sup>
+        conditions.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-36">[36]</a>
     </p>
     <h3><span class="mw-headline" id="Evolution_and_extinct_relatives">Evolution and extinct
             relatives</span></h3>
