--- a/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
@@ -794,47 +794,44 @@
     </p>
 
 
-    <tr>
-        <td style="text-align: left; font-size: 88%; border: 0; padding: 0;">Proboscidea
-            phylogeny based on Shoshani 1998.<sup id="cite_ref-evolution_44-0" class="reference"><a
-                    href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a></sup>
-        </td>
-    </tr>
+    Proboscidea phylogeny based on Shoshani 1998.
+    <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a>
 
-
-    <p>At the beginning of the <a href="https://en.wikipedia.org/wiki/Pleistocene" title="Pleistocene">Pleistocene</a>,
-        elephantids experienced a high rate of <a href="https://en.wikipedia.org/wiki/Speciation"
-            title="Speciation">speciation</a>.<sup id="cite_ref-Sukmar44_45-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukmar44-45">[45]</a></sup>
-        The Pleistocene also saw the arrival of <i><a href="https://en.wikipedia.org/wiki/Palaeoloxodon_namadicus"
-                title="Palaeoloxodon namadicus">Palaeoloxodon namadicus</a></i>, the largest
-        terrestrial mammal of all time.<sup id="cite_ref-Larramendi,_A._2015_46-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Larramendi,_A._2015-46">[46]</a></sup>
+    <p>
+        At the beginning of the
+        <a href="https://en.wikipedia.org/wiki/Pleistocene">Pleistocene</a>,
+        elephantids experienced a high rate of
+        <a href="https://en.wikipedia.org/wiki/Speciation">speciation</a>.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukmar44-45">[45]</a>
+        The Pleistocene also saw the arrival of
+        <i><a href="https://en.wikipedia.org/wiki/Palaeoloxodon_namadicus">Palaeoloxodon namadicus</a></i>, the largest
+        terrestrial mammal of all time.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Larramendi,_A._2015-46">[46]</a>
         <i><a href="https://en.wikipedia.org/wiki/Loxodonta_atlantica" title="Loxodonta atlantica">Loxodonta
                 atlantica</a></i> became the most common species in northern and southern Africa but
         was replaced by <i>Elephas iolensis</i> later in the Pleistocene. Only when <i>Elephas</i>
         disappeared from Africa did <i>Loxodonta</i> become dominant once again, this time in the form
         of the modern species. <i>Elephas</i> diversified into new species in Asia, such as
         <i>E.&nbsp;hysudricus</i>
-        and <i>E.&nbsp;platycephus</i>;<sup id="cite_ref-Sukumar28_47-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukumar28-47">[47]</a></sup>
-        the latter the likely ancestor of the modern Asian elephant.<sup id="cite_ref-Sukmar44_45-1"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukmar44-45">[45]</a></sup>
-        <i>Mammuthus</i> evolved into several species, including the well-known <a
-            href="https://en.wikipedia.org/wiki/Woolly_mammoth" title="Woolly mammoth">woolly
-            mammoth</a>.<sup id="cite_ref-Sukumar28_47-1" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukumar28-47">[47]</a></sup>
+        and <i>E.&nbsp;platycephus</i>;
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukumar28-47">[47]</a>
+        the latter the likely ancestor of the modern Asian elephant.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukmar44-45">[45]</a>
+        <i>Mammuthus</i> evolved into several species, including the well-known
+        <a href="https://en.wikipedia.org/wiki/Woolly_mammoth">woolly mammoth</a>.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Sukumar28-47">[47]</a>
         Interbreeding appears to have been common among elephantid species, which in some cases led to
-        species with three ancestral genetic components, such as the straight-tusked elephants.<sup
-            id="cite_ref-Palkopoulou_33-1" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Palkopoulou-33">[33]</a></sup>
-        In the <a href="https://en.wikipedia.org/wiki/Late_Pleistocene" title="Late Pleistocene">Late
-            Pleistocene</a>, most proboscidean species vanished during the <a
-            href="https://en.wikipedia.org/wiki/Quaternary_glaciation" title="Quaternary glaciation">Quaternary
-            glaciation</a> which <a href="https://en.wikipedia.org/wiki/Quaternary_extinction_event"
-            title="Quaternary extinction event">killed off</a> 50% of genera weighing over 5&nbsp;kg
-        (11&nbsp;lb) worldwide.<sup id="cite_ref-48" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-48">[48]</a></sup>
+        species with three ancestral genetic components, such as the straight-tusked elephants.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Palkopoulou-33">[33]</a>
+        In the
+        <a href="https://en.wikipedia.org/wiki/Late_Pleistocene">Late Pleistocene</a>,
+        most proboscidean species vanished during the
+        <a href="https://en.wikipedia.org/wiki/Quaternary_glaciation">Quaternary
+            glaciation</a> which
+        <a href="https://en.wikipedia.org/wiki/Quaternary_extinction_event">killed off</a> 50% of genera weighing over
+        5&nbsp;kg
+        (11&nbsp;lb) worldwide.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-48">[48]</a>
     </p>
     <p>Proboscideans experienced several evolutionary trends, such as an increase in size, which led to
         many giant species that stood up to 5&nbsp;m (16&nbsp;ft) tall.<sup id="cite_ref-Larramendi,_A._2015_46-1"
