next paragraph - done

--- a/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
+++ b/02.HTML-Structure-Exercise-Resouces/L2_09_Clean-up-Wiki-Elephant/source-file.html
@@ -833,56 +833,61 @@
         (11&nbsp;lb) worldwide.
         <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-48">[48]</a>
     </p>
-    <p>Proboscideans experienced several evolutionary trends, such as an increase in size, which led to
-        many giant species that stood up to 5&nbsp;m (16&nbsp;ft) tall.<sup id="cite_ref-Larramendi,_A._2015_46-1"
-            class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-Larramendi,_A._2015-46">[46]</a></sup>
-        As with other <a href="https://en.wikipedia.org/wiki/Megaherbivore" class="mw-redirect"
-            title="Megaherbivore">megaherbivores</a>,
-        including the extinct <a href="https://en.wikipedia.org/wiki/Sauropoda" title="Sauropoda">sauropod</a>
-        <a href="https://en.wikipedia.org/wiki/Dinosaur" title="Dinosaur">dinosaurs</a>, the large size
+
+    <p>
+        Proboscideans experienced several evolutionary trends, such as an increase in size, which led to
+        many giant species that stood up to 5&nbsp;m (16&nbsp;ft) tall.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-Larramendi,_A._2015-46">[46]</a>
+        As with other
+        <a href="https://en.wikipedia.org/wiki/Megaherbivore">megaherbivores</a>,
+        including the extinct
+        <a href="https://en.wikipedia.org/wiki/Sauropoda">sauropod</a>
+        <a href="https://en.wikipedia.org/wiki/Dinosaur">dinosaurs</a>, the large size
         of elephants likely developed to allow them to survive on vegetation with low nutritional
-        value.<sup id="cite_ref-49" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-49">[49]</a></sup>
-        Their limbs grew longer and the feet shorter and broader.<sup id="cite_ref-evolution_44-1" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a></sup>
-        The feet were originally <a href="https://en.wikipedia.org/wiki/Plantigrade" title="Plantigrade">plantigrade</a>
-        and developed into a <a href="https://en.wikipedia.org/wiki/Digitigrade" title="Digitigrade">digitigrade</a>
-        stance with cushion pads and the <a href="https://en.wikipedia.org/wiki/Sesamoid_bone"
-            title="Sesamoid bone">sesamoid
-            bone</a> providing support.<sup id="cite_ref-50" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-50">[50]</a></sup>
-        Early proboscideans developed longer <a href="https://en.wikipedia.org/wiki/Mandible"
-            title="Mandible">mandibles</a>
-        and smaller <a href="https://en.wikipedia.org/wiki/Skull" title="Skull">craniums</a> while more
-        <a href="https://en.wikipedia.org/wiki/Synapomorphy" class="mw-redirect" title="Synapomorphy">derived</a>
-        ones developed shorter mandibles, which shifted the head's <a
-            href="https://en.wikipedia.org/wiki/Center_of_mass" title="Center of mass">centre of
-            gravity</a>. The skull grew larger, especially the
+        value.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-49">[49]</a>
+        Their limbs grew longer and the feet shorter and broader.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a>
+        The feet were originally
+        <a href="https://en.wikipedia.org/wiki/Plantigrade">plantigrade</a>
+        and developed into a
+        <a href="https://en.wikipedia.org/wiki/Digitigrade">digitigrade</a>
+        stance with cushion pads and the
+        <a href="https://en.wikipedia.org/wiki/Sesamoid_bone">sesamoid
+            bone</a> providing support.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-50">[50]</a>
+        Early proboscideans developed longer
+        <a href="https://en.wikipedia.org/wiki/Mandible">mandibles</a>
+        and smaller
+        <a href="https://en.wikipedia.org/wiki/Skull">craniums</a> while more
+        <a href="https://en.wikipedia.org/wiki/Synapomorphy">derived</a>
+        ones developed shorter mandibles, which shifted the head's
+        <a href="https://en.wikipedia.org/wiki/Center_of_mass">centre of gravity</a>.
+        The skull grew larger, especially the
         cranium, while the neck shortened to provide better support for the skull. The increase in size
-        led to the development and elongation of the mobile trunk to provide reach. The number of <a
-            href="https://en.wikipedia.org/wiki/Premolar" title="Premolar">premolars</a>, incisors and
-        <a href="https://en.wikipedia.org/wiki/Canine_tooth" title="Canine tooth">canines</a>
-        decreased.<sup id="cite_ref-evolution_44-2" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a></sup>
+        led to the development and elongation of the mobile trunk to provide reach. The number of
+        <a href="https://en.wikipedia.org/wiki/Premolar">premolars</a>, incisors and
+        <a href="https://en.wikipedia.org/wiki/Canine_tooth">canines</a>
+        decreased.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a>
         The cheek teeth (molars and premolars) became larger and more specialized, especially after
-        elephants started to switch from <a href="https://en.wikipedia.org/wiki/C3_carbon_fixation"
-            title="C3 carbon fixation">C3-plants</a> to <a href="https://en.wikipedia.org/wiki/C4_carbon_fixation"
-            title="C4 carbon fixation">C4-grasses</a>,
+        elephants started to switch from
+        <a href="https://en.wikipedia.org/wiki/C3_carbon_fixation">C3-plants</a> to
+        <a href="https://en.wikipedia.org/wiki/C4_carbon_fixation">C4-grasses</a>,
         which caused their teeth to undergo a three-fold
         increase in teeth height as well as substantial multiplication of lamellae after about five
         million years ago. Only in the last million years or so did they return to a diet mainly
-        consisting of C3 trees and shrubs.<sup id="cite_ref-51" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-51">[51]</a></sup><sup id="cite_ref-52"
-            class="reference"><a href="https://en.wikipedia.org/wiki/Elephant#cite_note-52">[52]</a></sup>
+        consisting of C3 trees and shrubs.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-51">[51]</a>
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-52">[52]</a>
         The upper second incisors grew into tusks, which varied in shape from straight, to curved
         (either upward or downward), to spiralled, depending on the species. Some proboscideans
-        developed tusks from their lower incisors.<sup id="cite_ref-evolution_44-3" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a></sup>
-        Elephants retain certain features from their aquatic ancestry, such as their <a
-            href="https://en.wikipedia.org/wiki/Middle_ear" title="Middle ear">middle ear</a>
-        anatomy.<sup id="cite_ref-snorkel_53-0" class="reference"><a
-                href="https://en.wikipedia.org/wiki/Elephant#cite_note-snorkel-53">[53]</a></sup>
+        developed tusks from their lower incisors.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-evolution-44">[44]</a>
+        Elephants retain certain features from their aquatic ancestry, such as their
+        <a href="https://en.wikipedia.org/wiki/Middle_ear">middle ear</a>
+        anatomy.
+        <a href="https://en.wikipedia.org/wiki/Elephant#cite_note-snorkel-53">[53]</a>
     </p>
     <p>There has been some debate over the relationship of <i>Mammuthus</i> to <i>Loxodonta</i> or
         <i>Elephas</i>.
@@ -8635,29 +8640,6 @@ You can view its source [alt-shift-e]" accesskey="e">View
         <div style="clear: both;"></div>
     </div>
 
-    <script>(window.RLQ = window.RLQ || []).push(function () { mw.config.set({ "wgPageParseReport": { "limitreport": { "cputime": "3.212", "walltime": "3.674", "ppvisitednodes": { "value": 25927, "limit": 1000000 }, "ppgeneratednodes": { "value": 0, "limit": 1500000 }, "postexpandincludesize": { "value": 565363, "limit": 2097152 }, "templateargumentsize": { "value": 24749, "limit": 2097152 }, "expansiondepth": { "value": 25, "limit": 40 }, "expensivefunctioncount": { "value": 13, "limit": 500 }, "unstrip-depth": { "value": 1, "limit": 20 }, "unstrip-size": { "value": 517220, "limit": 5000000 }, "entityaccesscount": { "value": 9, "limit": 400 }, "timingprofile": ["100.00% 2899.525      1 -total", " 50.24% 1456.814      1 Template:Reflist", " 18.84%  546.131     66 Template:Cite_journal", " 13.10%  379.724      1 Template:Taxobox", " 12.53%  363.213      1 Template:Taxobox/core", " 10.36%  300.491     53 Template:Cite_book", "  9.99%  289.588     16 Template:Clade", "  8.38%  243.108     32 Template:Cite_web", "  8.00%  231.917     29 Template:Navbox", "  6.73%  195.035      1 Template:Fossil_range"] }, "scribunto": { "limitreport-timeusage": { "value": "1.627", "limit": "10.000" }, "limitreport-memusage": { "value": 28590520, "limit": 52428800 } }, "cachereport": { "origin": "mw1276", "timestamp": "20190110100750", "ttl": 1900800, "transientcontent": false } } }); mw.config.set({ "wgBackendResponseTime": 142, "wgHostname": "mw1325" }); });</script>
-
-
-    <div class="suggestions" style="display: none; font-size: 13px;">
-        <div class="suggestions-results"></div>
-        <div class="suggestions-special"></div>
-    </div>
-    <div id="mwe-popups-svg"><svg xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <defs>
-                <clippath id="mwe-popups-mask">
-                    <polygon points="0 8, 10 8, 18 0, 26 8, 1000 8, 1000 1000, 0 1000"></polygon>
-                </clippath>
-                <clippath id="mwe-popups-mask-flip">
-                    <polygon points="0 8, 274 8, 282 0, 290 8, 1000 8, 1000 1000, 0 1000"></polygon>
-                </clippath>
-                <clippath id="mwe-popups-landscape-mask">
-                    <polygon points="0 8, 174 8, 182 0, 190 8, 1000 8, 1000 1000, 0 1000"></polygon>
-                </clippath>
-                <clippath id="mwe-popups-landscape-mask-flip">
-                    <polygon points="0 0, 1000 0, 1000 242, 190 242, 182 250, 174 242, 0 242"></polygon>
-                </clippath>
-            </defs>
-        </svg></div>
 </body>
 
 </html>
